--- a/.coveragerc
+++ b/.coveragerc
@@ -1,5 +1,6 @@
 
 [report]
+precision=2
 # Regexes for lines to exclude from consideration
 exclude_lines =
     # Have to re-enable the standard pragma
