--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ test-py2:
   script:
   - apt-get update -qy
   - apt-get install -y python-dev python-pip
-  - pip3 install -r requirements.txt
+  - pip install -r requirements.txt
   - export PYTHONPATH=/builds/cbeauchesne/CampBot:$PYTHONPATH
   - pytest --cov campbot --cov-report=term
       
