--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 test-py2.7:
   stage: test
+  image: python:2.7
   script:
   - apt-get update -qy
   - apt-get install -y python-dev python-pip
@@ -9,15 +10,16 @@ test-py2.7:
       
 test-py3.6:
   stage: test
+  image: python:3.6
   script:
   - apt-get update -qy
-  - apt-get install -y python3.6 
   - pip3.6 install -r requirements.txt
   - export PYTHONPATH=/builds/cbeauchesne/CampBot:$PYTHONPATH
   - pytest --cov campbot --cov-report=term
       
 test-py3.5:
   stage: test
+  image: python:3.5
   script:
   - apt-get update -qy
   - apt-get install -y python3-dev python3-pip
