--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,15 @@ test-py3.5:
     paths:
       - htmlcov
       
+test-py3.6:
+  stage: test
+  image: python:3.6
+  script:
+  - apt-get update -qy
+  - pip3.6 install -r requirements.txt
+  - export PYTHONPATH=/builds/cbeauchesne/CampBot:$PYTHONPATH
+  - pytest --cov campbot --cov-report=term
+      
 test-py3.7:
   stage: test
   image: python:3.7
