--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python_version: ["2.7", "3.5", "3.6", "3.7"]
+        python_version: ["2.7", "3.5", "3.6", "3.7", "3.8"]
     steps:
       - uses: actions/checkout@master
       - name: Setup python
