--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -39,7 +39,7 @@ jobs:
         if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
         run: |
           echo "Tag name is ${GITHUB_REF##*/}"
-          python -c "import campbot; print("Version is " + campbot.__version__)"
+          python -c "import campbot; print('Version is ' + campbot.__version__)"
           python -c "import campbot; exit(1 if campbot.__version__ != '${GITHUB_REF##*/}' else 0)"
       - name: Publish package to PyPI
         if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
