--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,7 +17,7 @@ jobs:
           python-version: ${{ matrix.python_version }}
           architecture: x64
       - name: Install dependancies
-        run: pip install -r requirements.txt -r dev-requirements.txt black==19.10b0
+        run: pip install -r requirements.txt -r dev-requirements.txt
       - name: Check python format
         run: black --check campbot
   test:
@@ -25,7 +25,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python_version: ["2.7", "3.5", "3.6", "3.7", "3.8", "3.9"]
+        python_version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
     steps:
       - uses: actions/checkout@master
       - name: Setup python
